--- a/game/index.html
+++ b/game/index.html
@@ -3,13 +3,18 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="apple-touch-icon" sizes="180x180" href="src/assets/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="src/assets/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon-16x16.png" />
+		<link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+		<link rel="manifest" href="src/assets/site.webmanifest" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Gajraj+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=VT323&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Tetris</title>
+		<title>Tetris Styler</title>
 	</head>
 	<body>
 		<div id="root"></div>
